--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,9 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "cstring": "cpp",
+        "set": "cpp",
+        "iostream": "cpp"
     }
 }
