cond_vars and barriers

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,7 @@
 			"label": "C/C++: g++ build active file",
 			"command": "/usr/bin/g++",
 			"args": [
+				"-pthread",
 				"-g",
 				"${file}",
 				"-o",
