--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 ENDIF(Boost_FOUND)
 
-file(GLOB_RECURSE final_SOURCES "final/*")
+file(GLOB_RECURSE final_SOURCES "final_task/*")
 
 file(MAKE_DIRECTORY /home/box/final)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/box/final)
@@ -22,4 +22,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY /home/box/final)
 set(USED_LIBS ${Boost_SYSTEM_LIBRARY} ${Boost_THREAD_LIBRARY} pthread)
 
 add_executable(final ${final_SOURCES})
-#target_link_libraries(final ${USED_LIBS})
+target_link_libraries(final ${USED_LIBS})
